# hpc-programming-lab

./: .gitlab-ci.yml  README.md
part_1_disease/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
part_1_disease/configExample/: disease_in.ini
part_1_disease/report_data/: disease_details.csv  disease_stats.csv  disease_stats_1.csv  disease_stats_10.csv  disease_stats_11.csv  disease_stats_2.csv  disease_stats_3.csv  disease_stats_4.csv  disease_stats_5.csv  disease_stats_6.csv  disease_stats_7.csv  disease_stats_8.csv  disease_stats_9.csv
part_1_disease/simulation/: disease.cpp  main.cpp  person.cpp  population.cpp  simulation.cpp  simulation.h  test.cpp  utility.cpp
part_2_parallel/: .gitignore  CMakeLists.txt  Dockerfile  README.md
part_2_parallel/scripts/: README.md  generate_patterns.py
part_2_parallel/src/: GameOfLife.cpp  GameOfLife.h  GameOfLifeUI.cpp  GameOfLifeUI.h  LocalGameOfLife.cpp  LocalGameOfLife.h  Logger.h  main.cpp
part_3_quantum/: .gitignore  README.md
